@@ -5,7 +5,6 @@ import com.danielagapov.spawn.Exceptions.Base.BaseNotFoundException;
 import com.danielagapov.spawn.Exceptions.Base.BaseSaveException;
 import com.danielagapov.spawn.Exceptions.Base.BasesNotFoundException;
 import com.danielagapov.spawn.Exceptions.Logger.ILogger;
-import com.danielagapov.spawn.Mappers.UserMapper;
 import com.danielagapov.spawn.Models.FriendTag;
 import com.danielagapov.spawn.Models.User;
 import com.danielagapov.spawn.Repositories.IFriendTagRepository;
@@ -20,6 +19,7 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.dao.DataAccessException;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -313,14 +313,14 @@ public class UserServiceTests {
 
         // User1's friends: mutualFriend1, mutualFriend2, uniqueFriend1
         when(friendTagRepository.findByOwnerId(user1Id))
-            .thenReturn(Optional.of(List.of(createEveryoneTag(user1Id))));
+            .thenReturn(List.of(createEveryoneTag(user1Id)));
         when(userFriendTagRepository.findFriendIdsByTagId(any()))
             .thenReturn(List.of(mutualFriend1Id, mutualFriend2Id, uniqueFriend1Id))
             .thenReturn(List.of(mutualFriend1Id, mutualFriend2Id, uniqueFriend2Id));
 
         // User2's friends: mutualFriend1, mutualFriend2, uniqueFriend2
         when(friendTagRepository.findByOwnerId(user2Id))
-            .thenReturn(Optional.of(List.of(createEveryoneTag(user2Id))));
+            .thenReturn(List.of(createEveryoneTag(user2Id)));
 
         int result = userService.getMutualFriendCount(user1Id, user2Id);
 
@@ -338,14 +338,14 @@ public class UserServiceTests {
 
         // User1's friends: friend1
         when(friendTagRepository.findByOwnerId(user1Id))
-            .thenReturn(Optional.of(List.of(createEveryoneTag(user1Id))));
+            .thenReturn(List.of(createEveryoneTag(user1Id)));
         when(userFriendTagRepository.findFriendIdsByTagId(any()))
             .thenReturn(List.of(friend1Id))
             .thenReturn(List.of(friend2Id));
 
         // User2's friends: friend2
         when(friendTagRepository.findByOwnerId(user2Id))
-            .thenReturn(Optional.of(List.of(createEveryoneTag(user2Id))));
+            .thenReturn(List.of(createEveryoneTag(user2Id)));
 
         int result = userService.getMutualFriendCount(user1Id, user2Id);
 
@@ -362,14 +362,14 @@ public class UserServiceTests {
 
         // User1 has one friend
         when(friendTagRepository.findByOwnerId(user1Id))
-            .thenReturn(Optional.of(List.of(createEveryoneTag(user1Id))));
+            .thenReturn(List.of(createEveryoneTag(user1Id)));
         when(userFriendTagRepository.findFriendIdsByTagId(any()))
             .thenReturn(List.of(friendId))
-            .thenReturn(List.of()); // User2 has no friends
+            .thenReturn(Collections.emptyList()); // User2 has no friends
 
         // User2 has no friends (empty everyone tag)
         when(friendTagRepository.findByOwnerId(user2Id))
-            .thenReturn(Optional.of(List.of(createEveryoneTag(user2Id))));
+            .thenReturn(List.of(createEveryoneTag(user2Id)));
 
         int result = userService.getMutualFriendCount(user1Id, user2Id);
 
@@ -385,9 +385,9 @@ public class UserServiceTests {
 
         // Both users have empty everyone tags
         when(friendTagRepository.findByOwnerId(any()))
-            .thenReturn(Optional.of(List.of(createEveryoneTag(UUID.randomUUID()))));
+            .thenReturn(List.of(createEveryoneTag(UUID.randomUUID())));
         when(userFriendTagRepository.findFriendIdsByTagId(any()))
-            .thenReturn(List.of());
+            .thenReturn(Collections.emptyList());
 
         int result = userService.getMutualFriendCount(user1Id, user2Id);
 
@@ -403,12 +403,78 @@ public class UserServiceTests {
 
         // Users have no everyone tag
         when(friendTagRepository.findByOwnerId(any()))
-            .thenReturn(Optional.of(List.of()));
+            .thenReturn(List.of());
 
         int result = userService.getMutualFriendCount(user1Id, user2Id);
 
         assertEquals(0, result);
         verify(friendTagRepository, times(2)).findByOwnerId(any());
+        verify(userFriendTagRepository, never()).findFriendIdsByTagId(any());
+    }
+
+    @Test
+    void getMutualFriendCount_ShouldHandleEmptyOptionals() {
+        UUID user1Id = UUID.randomUUID();
+        UUID user2Id = UUID.randomUUID();
+
+        when(friendTagRepository.findByOwnerId(any()))
+            .thenReturn(List.of());
+
+        int result = userService.getMutualFriendCount(user1Id, user2Id);
+
+        assertEquals(0, result);
+        verify(friendTagRepository, times(2)).findByOwnerId(any());
+        verify(userFriendTagRepository, never()).findFriendIdsByTagId(any());
+    }
+
+    @Test
+    void getFriendUserIdsByFriendTagId_ShouldReturnEmptyList_WhenNoFriendsFound() {
+        UUID tagId = UUID.randomUUID();
+        when(userFriendTagRepository.findFriendIdsByTagId(tagId))
+            .thenReturn(List.of());
+
+        List<UUID> result = userService.getFriendUserIdsByFriendTagId(tagId);
+
+        assertTrue(result.isEmpty());
+        verify(userFriendTagRepository, times(1)).findFriendIdsByTagId(tagId);
+    }
+
+    @Test
+    void getFriendsByFriendTagId_ShouldReturnEmptyList_WhenNoFriendsFound() {
+        UUID tagId = UUID.randomUUID();
+        when(userFriendTagRepository.findFriendIdsByTagId(tagId))
+            .thenReturn(List.of());
+
+        List<UserDTO> result = userService.getFriendsByFriendTagId(tagId);
+
+        assertTrue(result.isEmpty());
+        verify(userFriendTagRepository, times(1)).findFriendIdsByTagId(tagId);
+    }
+
+    @Test
+    void saveFriendToUser_ShouldSkip_WhenNoEveryoneTagFound() {
+        UUID userId = UUID.randomUUID();
+        UUID friendId = UUID.randomUUID();
+
+        when(friendTagRepository.findEveryoneTagByOwnerId(any()))
+            .thenReturn(Optional.empty());
+
+        userService.saveFriendToUser(userId, friendId);
+
+        verify(friendTagService, never()).saveUserToFriendTag(any(), any());
+    }
+
+    @Test
+    void getFriendUserIdsByUserId_ShouldReturnEmptyList_WhenNoEveryoneTagFound() {
+        UUID userId = UUID.randomUUID();
+        
+        when(friendTagRepository.findByOwnerId(userId))
+            .thenReturn(List.of(new FriendTag(UUID.randomUUID(), "Test", "#000000", userId, false)));
+
+        List<UUID> result = userService.getFriendUserIdsByUserId(userId);
+
+        assertTrue(result.isEmpty());
+        verify(friendTagRepository, times(1)).findByOwnerId(userId);
         verify(userFriendTagRepository, never()).findFriendIdsByTagId(any());
     }
 
